fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ align-self: center;
 .content-text {
     align-self: center;
     justify-self: center;
+    text-align: center;
 
 }
 .footer {
